// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result should match a snapshot when LOADING false 1`] = `
<Connect(ErrorBoundary)>
  <FlexContainerBasic
    flexColumn={true}
    hasPadding={true}
  >
    <div>
      <FlexContainerResponsive
        flexColumn={true}
        hasBackground={true}
        hasPadding={true}
      >
        <H3>
          Showing Results for '
          1
          '
        </H3>
        <Table
          columns={
            Array [
              Object {
                "Header": "Name",
                "accessor": [Function],
                "id": "name",
              },
              Object {
                "Cell": [Function],
                "Header": "Address",
                "id": "address",
              },
              Object {
                "Cell": [Function],
                "Header": "Postcode",
                "id": "postcode",
              },
              Object {
                "Cell": [Function],
                "Header": "Status",
                "id": "identityCheck",
              },
              Object {
                "Cell": [Function],
                "Header": "",
                "id": "action",
              },
            ]
          }
          data={Array []}
          loading={false}
          scrollable={true}
        />
        <Pagination
          onChange={[Function]}
          pageNumber={1}
          pageSize={50}
          totalCount={3609}
        />
      </FlexContainerResponsive>
    </div>
  </FlexContainerBasic>
</Connect(ErrorBoundary)>
`;

exports[`Result should match a snapshot when LOADING true 1`] = `
<Connect(ErrorBoundary)>
  <FlexContainerBasic
    flexColumn={true}
    hasPadding={true}
  >
    <div>
      <FlexContainerResponsive
        flexColumn={true}
        hasBackground={true}
        hasPadding={true}
      >
        <H3>
          Showing Results for '
          1
          '
        </H3>
        <Table
          columns={
            Array [
              Object {
                "Header": "Name",
                "accessor": [Function],
                "id": "name",
              },
              Object {
                "Cell": [Function],
                "Header": "Address",
                "id": "address",
              },
              Object {
                "Cell": [Function],
                "Header": "Postcode",
                "id": "postcode",
              },
              Object {
                "Cell": [Function],
                "Header": "Status",
                "id": "identityCheck",
              },
              Object {
                "Cell": [Function],
                "Header": "",
                "id": "action",
              },
            ]
          }
          data={Array []}
          loading={true}
          scrollable={true}
        />
        <Pagination
          onChange={[Function]}
          pageNumber={1}
        />
      </FlexContainerResponsive>
    </div>
  </FlexContainerBasic>
</Connect(ErrorBoundary)>
`;

exports[`Result should match a snapshot when no results found 1`] = `
<Connect(ErrorBoundary)>
  <FlexContainerBasic
    flexColumn={true}
    hasPadding={true}
  >
    <div>
      <FlexContainerResponsive
        flexColumn={true}
        hasBackground={true}
        hasPadding={true}
      >
        <div>
          <div>
            <Info
              infoType=""
            >
              <H6>
                No Results found
              </H6>
            </Info>
          </div>
          <div>
            <Button
              onClick={[Function]}
              type="button"
              variant="primary"
            >
              New Search
            </Button>
          </div>
        </div>
        <Pagination
          onChange={[Function]}
          pageNumber={1}
        />
      </FlexContainerResponsive>
    </div>
  </FlexContainerBasic>
</Connect(ErrorBoundary)>
`;
